--- a/Web Design/HTML Task/Task2/HTML Task Practice 2.html
+++ b/Web Design/HTML Task/Task2/HTML Task Practice 2.html
@@ -11,6 +11,7 @@
     </style> -->
 </head>
 <body>
+    <h1>Basic HTML Table</h1>
     <table>
         <thead>
             <tr>
@@ -53,6 +54,7 @@
         </tbody>
     </table>
     <br>
+    <h1>Simple Table View</h1>
     <table border="2">
         <thead>
             <tr>
@@ -80,6 +82,7 @@
         </tbody>
     </table>
     <br>
+    <h1>Using Colspan</h1>
     <table border="2">
         <thead>
             <tr>
@@ -102,6 +105,7 @@
         </tbody>
     </table>
     <br>
+    <h1>Table with Name & Age</h1>
     <table border="2">
         <thead>
             <tr>
@@ -137,6 +141,7 @@
         </tbody>
     </table>
     <br>
+    <h1>Colspan & Rowspan Usage</h1>
     <table border="2">
         <thead>
             <tr>
@@ -154,6 +159,7 @@
         </thead>
     </table>
     <br>
+    <h1>Complex Table Structure</h1>
     <table border="2">
         <thead>
             <tr>
@@ -188,6 +194,7 @@
         </body>
     </table>
     <br>
+    <h1>Time Table</h1>
     <table border="2">
         <thead>
             <tr>
@@ -236,6 +243,7 @@
         </tbody>
     </table>
     <br>
+    <h1>Advanced Table with Summary</h1>
     <table border="2">
         <thead>
             <tr>
